module/postponed/type_constructor/tests/inc/pair/pair_three_elements_test.rs
use type_constructor::prelude::*;

fn main()
{
  types!( pair Bad< T1, T2, T3 > );
}
